updated micronaut version